--- a/pages/settingsStyles.css
+++ b/pages/settingsStyles.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    border: 3px solid #dadada;
+    /* border: 3px solid #dadada; */
     border-radius: 10px;
 
     width: calc(100vw - 6px);
