--- a/pages/settingsStyles.css
+++ b/pages/settingsStyles.css
@@ -1,17 +1,112 @@
-body {
-    margin: 0;
-    /* border: 3px solid #dadada; */
-    border-radius: 10px;
+:root {
+    --text-color: #000000;
+    --background-color: #ffffff;
+    --primary-color: #dadada;
+    --secondary-color: #c8c8c8;
+    --tertiary-color: #7e7e7e;
+    --loading-blue: #7db6e8;
+}
 
-    width: calc(100vw - 6px);
-    height: calc(100vw - 6px);
+[data-theme="dark"] {
+    --text-color: #ffffff;
+    --background-color: #000000;
+    --primary-color: #262626;
+    --secondary-color: #383838;
+    --tertiary-color: #828282;
+    --loading-blue: #7db6e8;
+}
+
+html {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 11pt;
+}
+
+body {
+    width: 100vw;
+    height: 100vh;
+    
+    margin: 0;
+    padding: 0;
+    
+    /* border: 2px solid var(--primary-color); */
+    /* border-radius: 10px; */
+    
+    /* overflow: hidden; */
+
+    -webkit-user-select: none;
+    user-select: none;
 }
 
 #optionsList {
-    width: calc(100vw - 26px);
-    height: calc(100vw - 26px);
+    width: calc(100vw - 4px);
+    height: calc(100vh - 4px);
+
     margin: 0;
-    padding: 10px;
-    border-radius: 10px;
-    background-color: #ffffff;
+    padding: 0;
+
+    border: 2px solid var(--primary-color);
+    border-radius: 8px;
+    background: var(--background-color);
+
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+.row {
+    width: calc(100% - 1.6em);
+    height: 1.8em;
+
+    padding-right: .8em;
+    padding-left: .8em;
+
+    border-bottom: 2px solid var(--primary-color);
+
+    text-align: center;
+
+    color: var(--text-color);
+
+    background: var(--background-color);
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: .4em;
+}
+
+.row:last-of-type {
+    border: none;
+}
+
+.row:hover {
+    background: var(--primary-color);
+}
+
+/* .row:active {
+    background-color: var(--secondary-color);
+    border-bottom: 2px solid var(--secondary-color);
+} */
+
+.rowItem {
+    height: min-content;
+}
+
+.checkbox {
+    width: 15px;
+    height: 15px;
+    border: 2px solid var(--loading-blue);
+    border-radius: 5px;
+
+    color: var(--background-color);
+    /* color: var(--text-color); */
+
+    background: transparent;
+}
+
+.checkbox:hover {
+    background: var(--loading-blue);
+}
+
+.checkbox.checked {
+    background: var(--loading-blue);
 }
