--- a/pages/styles.css
+++ b/pages/styles.css
@@ -158,7 +158,7 @@ body {
 
 .barButton:active {
     background-color: var(--secondary-color);
-    border: 2px solid var(--secondary-color)
+    border: 2px solid var(--secondary-color);
 }
 
 .barButton:disabled {
@@ -170,8 +170,8 @@ body {
 }
 
 .barButton:disabled:active {
-    border: 2px solid var(--primary-color);
     background-color: var(--primary-color);
+    border: 2px solid var(--primary-color);
 }
 
 #backButton {
