--- a/pages/settingsStyles.css
+++ b/pages/settingsStyles.css
@@ -22,14 +22,14 @@
 
 /* Blue */
 
-:root {
+/* :root {
     --text-color: #000000;
     --background-color: #bad6f9;
     --primary-color: #96b7df;
     --secondary-color: #7d9dc5;
     --tertiary-color: #6d8097;
     --loading-color: #49688d;
-}
+} */
 
 /* Pink */
 
@@ -42,7 +42,18 @@
     --loading-color: #8d4969;
 } */
 
-/* Green */
+/* Mint */
+
+:root {
+    --text-color: #000000;
+    --background-color: #b9f9c3;
+    --primary-color: #96dfa1;
+    --secondary-color: #7dc588;
+    --tertiary-color: #6d9773;
+    --loading-color: #498d53;
+}
+
+/* Lime */
 
 /* :root {
     --text-color: #000000;
@@ -79,25 +90,25 @@
 
 /* Gray */
 
-[data-theme="dark"] {
+/* [data-theme="dark"] {
     --text-color: #ffffff;
     --background-color: #464646;
     --primary-color: #606060;
     --secondary-color: #727272;
     --tertiary-color: #989898;
     --loading-color: #7db6e8;
-}
+} */
 
 /* Black */
 
-/* [data-theme="dark"] {
+[data-theme="dark"] {
     --text-color: #ffffff;
     --background-color: #000000;
     --primary-color: #262626;
     --secondary-color: #383838;
     --tertiary-color: #828282;
     --loading-color: #7db6e8;
-} */
+}
 
 html {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
