--- a/pages/styles.css
+++ b/pages/styles.css
@@ -33,16 +33,27 @@
 
 /* Blue */
 
-:root {
+/* :root {
     --text-color: #000000;
     --background-color: #bad6f9;
     --primary-color: #96b7df;
     --secondary-color: #7d9dc5;
     --tertiary-color: #6d8097;
     --loading-color: #49688d;
+} */
+
+/* Mint */
+
+:root {
+    --text-color: #000000;
+    --background-color: #b9f9c3;
+    --primary-color: #96dfa1;
+    --secondary-color: #7dc588;
+    --tertiary-color: #6d9773;
+    --loading-color: #498d53;
 }
 
-/* Green */
+/* Lime */
 
 /* :root {
     --text-color: #000000;
@@ -53,7 +64,7 @@
     --loading-color: #598d49;
 } */
 
-/* Yellow */
+/* Banana */
 
 /* :root {
     --text-color: #000000;
@@ -79,25 +90,25 @@
 
 /* Gray */
 
-[data-theme="dark"] {
+/* [data-theme="dark"] {
     --text-color: #ffffff;
     --background-color: #464646;
     --primary-color: #606060;
     --secondary-color: #727272;
     --tertiary-color: #989898;
     --loading-color: #7db6e8;
-}
+} */
 
 /* Black */
 
-/* [data-theme="dark"] {
+[data-theme="dark"] {
     --text-color: #ffffff;
     --background-color: #000000;
     --primary-color: #262626;
     --secondary-color: #383838;
     --tertiary-color: #828282;
     --loading-color: #7db6e8;
-} */
+}
 
 body {
     color: var(--text-color);
