--- a/pages/styles.css
+++ b/pages/styles.css
@@ -1,27 +1,27 @@
 
 /* White */
 
-/* :root {
+:root {
     --text-color: #000000;
     --background-color: #ffffff;
     --primary-color: #dadada;
     --secondary-color: #c8c8c8;
     --tertiary-color: #7e7e7e;
     --loading-color: #7db6e8;
-} */
+}
 
 /* Experimenting with other color themes, no theme style switcher functionality implemented, though */
 
 /* Cherry */
 
-:root {
+/* :root {
     --text-color: #000000;
     --background-color: #f9b9d7;
     --primary-color: #df96b8;
     --secondary-color: #c57d9e;
     --tertiary-color: #976d81;
     --loading-color: #8d4969;
-}
+} */
 
 /* Strawberry */
 
@@ -331,26 +331,22 @@ body {
 
 #tabBar {
     width: 100vw;
-    min-width: 100vw;
     height: 30px;
     min-height: 30px;
 
     background-color: var(--background-color);
 
     display: flex;
-    justify-content: center;
-    align-items: center;
 
     overflow-x: scroll;
 }
 
 .tab {
     width: 100%;
-    /* min-width: 100px; */
+    min-width: 100px;
     height: 30px;
-    min-height: 30px;
 
-    flex: 1 1 1;
+    flex-shrink: 1;
 
     border-right: 2px solid var(--primary-color);
 
@@ -360,6 +356,8 @@ body {
     font-size: 11.5pt;
 
     color: var(--tertiary-color);
+
+    overflow-x: hidden;
 
     display: flex;
     justify-content: center;
@@ -372,35 +370,38 @@ body {
     border: none;
 }
 
-.tab:nth-of-type(3) {
-    color: var(--text-color);
-}
+/* .tab:hover {
+    background: var(--primary-color);
+} */
+
+/* .tab:hover {
+    color: var(--loading-color);
+} */
 
 .tabTitle {
     width: 100%;
-
+    
     text-align: center;
-
+    
     /* overflow-x: scroll; */
     overflow-x: hidden;
-
-    white-space: nowrap; /* Don't forget this one */
+    
+    white-space: nowrap;
     text-overflow: ellipsis;
 }
 
-.closeButtonCont {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+.tabTitle:hover {
+    color: var(--loading-color);
+}
 
-    height: 100%;
-    text-align: right;
-    min-width: 1.1em;
+.active > .tabTitle {
+    color: var(--text-color);
 }
 
 .closeButton {
+    margin-left: 3px;
     width: 1em;
-    height: 1em;
+
     color: var(--tertiary-color);
 }
 
