Changed favorite page sizing a little

--- a/pages/settingsStyles.css
+++ b/pages/settingsStyles.css
@@ -25,14 +25,14 @@
 
 /* Strawberry */
 
-/* :root {
+:root {
     --text-color: #000000;
     --background-color: #f9b9ba;
     --primary-color: #df9697;
     --secondary-color: #c57d7e;
     --tertiary-color: #976d6e;
     --loading-color: #8d494a;
-} */
+}
 
 /* Sea Cyan */
 
