--- a/pages/favoritesStyles.css
+++ b/pages/favoritesStyles.css
@@ -8,14 +8,14 @@
     --shadow-color: #AAAAAA;
 }
 
-/* :root {
-    --text-color: #ffffff;
-    --background-color: #000000;
-    --primary-color: #262626;
-    --secondary-color: #383838;
-    --tertiary-color: #828282;
-    --loading-color: #7db6e8;
-} */
+:root {
+    --text-color: #000000;
+    --background-color: #f9b9ba;
+    --primary-color: #df9697;
+    --secondary-color: #c57d7e;
+    --tertiary-color: #976d6e;
+    --loading-color: #8d494a;
+}
 
 [data-theme="dark"] {
     --text-color: #ffffff;
@@ -143,7 +143,9 @@ h1 {
     margin-top: 0;
     margin-bottom: 0;
 
-    font-size: x-large;
+    /* font-size: x-large; */
+    font-size: min(min(9vw, 7vh), 30px);
+
     text-align: left;
 
     color: var(--text-color);
@@ -161,8 +163,8 @@ h1 {
 .icon {
     width: min(18vw, 14vh);
     height: min(18vw, 14vh);
-    max-width: min(18vw, 14vh);
-    max-height: min(18vw, 14vh);
+    max-width: min(min(18vw, 14vh), 90px);
+    max-height: min(min(18vw, 14vh), 90px);
 
     /* border-radius: 5px; */
     border-radius: 7%;
@@ -171,7 +173,9 @@ h1 {
     justify-content: center;
     align-items: center;
 
-    font-size: xx-large;
+    /* font-size: xx-large; */
+
+    font-size: min(min(9vw, 7vh), 45px);
 
     color: white;
 
@@ -179,15 +183,15 @@ h1 {
 }
 
 @media (prefers-color-scheme: light) {
-    .icon {
+    /* .icon {
         box-shadow: 0 5px 8px var(--shadow-color);
-        /* transition-duration: 250ms; */
+        // comment transition-duration: 250ms;
         transition: box-shadow 200ms ease-in;
     }
     
     .icon:hover {
         box-shadow: 0 2px 5px var(--shadow-color);
-    }
+    } */
 }
 
 @media (prefers-color-scheme: dark) {
