--- a/pages/styles.css
+++ b/pages/styles.css
@@ -23,7 +23,7 @@
     --loading-color: #8d4969;
 } */
 
-/* Strawberry */
+/* Peach */
 
 :root {
     --text-color: #000000;
@@ -150,13 +150,13 @@ body {
     margin: 0;
     padding: 0;
 
-    height: fit-content;
+    height: min-content;
     
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 12pt;
     
     color: var(--text-color);
-    background: var(--background-color);
+    /* background: var(--background-color); */
 }
 
 #progressBar {
