--- a/pages/styles.css
+++ b/pages/styles.css
@@ -196,29 +196,42 @@ body {
 }
 
 #leftPart {
-    justify-content: flex-start;
+    justify-content: space-between;
     gap: 5px;
 }
 
+/* #rightLeftPart {
+    justify-content: flex-end;
+} */
+
+#leftLeftPart {
+    min-width: 132.2px;
+    justify-content: flex-start;
+}
+
 #centerPart {
-    flex: 0 0 0;
+    max-width: 450px;
+    min-width: 200px;
+
+    flex: 2 0 0;
     justify-content: space-around;
 }
 
 #rightPart {
     justify-content: space-between;
 }
-
+/* 
 #leftRightPart {
     justify-content: flex-start;
 }
 
 #rightRightPart {
     justify-content: flex-end;
-}
+} */
 
 #searchBar {
-    width: 300px;
+    /* width: 300px; */
+    width: 100%;
     height: 20px;
     
     padding-right: 5px;
@@ -320,6 +333,12 @@ body {
 
 #backButton {
     margin-left: 75px;
+    margin-right: 1px;
+}
+
+#pageSettingsButton {
+    padding-top: 0px;
+    padding-left: 2px;
 }
 
 /* #forwardButton {} */
