--- a/pages/styles.css
+++ b/pages/styles.css
@@ -150,13 +150,16 @@ body {
     margin: 0;
     padding: 0;
 
-    height: min-content;
+    height: 100vh;
     
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 12pt;
     
     color: var(--text-color);
     /* background: var(--background-color); */
+
+    display: flex;
+    flex-direction: column-reverse;
 }
 
 #progressBar {
